package com.tsw.insectdetector.listener;

public interface IDataFetchListener {
    void onDataReady();
    void onFetchError();
}
