package com.tsw.insectdetector.listener;

public interface IPageStateListener {
    void onPageEmpty(boolean empty);
}
